<resources>
    <string name="app_name">gardien_animaux</string>

    <string name="arrow_left">arrow left</string>
    <string name="offer">Offer</string>
    <string name="scroll_view">scroll view</string>
    <string name="total_ratings_bar">total ratings bar</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="reviews">Reviews</string>
    <string-array name="offer_types">
        <item>Keeper</item>
        <item>Owner</item>
    </string-array>
    <string-array name="pet_types">
        <item>Cat</item>
        <item>Dog</item>
        <item>Bird</item>
        <item>Fish</item>
        <item>Rabbit</item>
        <item>Rodent</item>
        <item>Reptile</item>
    </string-array>


    <string name="email">Email</string>
    <string name="login">se connecter</string>
    <string name="logo">logo</string>
    <string name="bg_image">bg_image</string>
    <string name="password">Password</string>
    <string name="signup">S\'inscrire</string>

    <string name="you_don_t_have_an_account">Vous n\'avez pas de compte</string>



</resources>